--- a/ComputeMe/ComputeMe/Storyboard/SettingStoryboard.storyboard
+++ b/ComputeMe/ComputeMe/Storyboard/SettingStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Wfd-pM-IJm">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13C1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Wfd-pM-IJm">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -7,7 +7,7 @@
         <!--Setting View Controller-->
         <scene sceneID="4Cr-qy-7Ux">
             <objects>
-                <viewController id="Wfd-pM-IJm" customClass="CMSettingViewController" sceneMemberID="viewController">
+                <viewController restorationIdentifier="CMSettingViewController" storyboardIdentifier="CMSettingViewController" id="Wfd-pM-IJm" customClass="CMSettingViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="yB0-fx-LpY"/>
                         <viewControllerLayoutGuide type="bottom" id="tPi-aJ-H9g"/>
