--- a/ComputeMe/ComputeMe/Storyboard/InitialStoryboard.storyboard
+++ b/ComputeMe/ComputeMe/Storyboard/InitialStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13C1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="074-Bj-WkD">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13C1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="42E-95-iWD">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -100,7 +100,46 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uwY-mB-RrX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1563" y="-186"/>
+            <point key="canvasLocation" x="1569" y="-152"/>
+        </scene>
+        <!--Get Ready View Controller-->
+        <scene sceneID="LVZ-6y-4WZ">
+            <objects>
+                <viewController restorationIdentifier="CMGetReadyViewController" storyboardIdentifier="CMGetReadyViewController" id="42E-95-iWD" customClass="CMGetReadyViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="is2-Nd-qDJ"/>
+                        <viewControllerLayoutGuide type="bottom" id="dNd-dL-aHB"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Jnd-Wp-ZPP">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="get ready" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bRA-fs-rYH">
+                                <rect key="frame" x="57" y="140" width="206" height="47"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
+                                <color key="textColor" red="0.7882353663444519" green="0.7882353663444519" blue="0.7882353663444519" alpha="1" colorSpace="deviceRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="3" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ehh-Kr-7WN">
+                                <rect key="frame" x="131" y="235" width="59" height="129"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="100"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.1098039299249649" green="0.11372549831867218" blue="0.090196080505847931" alpha="1" colorSpace="deviceRGB"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="UaB-Wx-ddL"/>
+                    <connections>
+                        <outlet property="countDownLabel" destination="Ehh-Kr-7WN" id="8Oo-Ha-N7S"/>
+                        <outlet property="getReadyLabel" destination="bRA-fs-rYH" id="72d-UJ-rj4"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ng1-2A-8cw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2582" y="-143"/>
         </scene>
         <!--Game Category View Controller-->
         <scene sceneID="WIZ-XT-zmx">
@@ -178,7 +217,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LzC-nI-7LW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2006" y="-186"/>
+            <point key="canvasLocation" x="2076" y="-152"/>
         </scene>
         <!--Start View Controller-->
         <scene sceneID="UUx-nN-6Uf">
@@ -246,7 +285,7 @@
     </scenes>
     <resources>
         <image name="Logo" width="200" height="200"/>
-        <image name="Setting" width="51" height="51"/>
+        <image name="Setting" width="25" height="25"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
